--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,10 @@ permalink:           pretty
 # Setup
 title:               Every Captive Thought
 tagline:             2 Cor 10:5
-url:                 http://behringk.github.io/poole/
+url:                 http://everycaptivethought.com
 paginate:            5
+name:                Every Captive Thought
+description:         Ruminations on faith and culture.
 
 
 # Assets
